--- a/css/main.css
+++ b/css/main.css
@@ -9,12 +9,22 @@
 
 html {
     font-family: 'Roboto', sans-serif;
+    text-decoration: none;
 }
 
 img{
     width: 100%;
     height: 100%;
     object-fit:cover;
+}
+
+body{
+    height: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-between;
+    padding: 0;
 }
 
 
